--- a/WpfAddressBook/Views/ContactListView.xaml
+++ b/WpfAddressBook/Views/ContactListView.xaml
@@ -17,10 +17,34 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
-        <StackPanel>
+        <StackPanel Grid.Row="0">
             <Label Content="List Of Contacts"/>
             <Button Content="Navigate to Add" Command="{Binding NavigateToAddCommand}"/>
         </StackPanel>
+
+
+        <ListView Grid.Row="1" ItemsSource="{Binding PrivateContacts}" HorizontalContentAlignment="Stretch" >
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        
+                        <TextBlock Grid.Column="0" Text="{Binding FirstName}" VerticalAlignment="Center" />
+
+                        <StackPanel Grid.Column="1" Orientation="Horizontal">
+                            <Button Content="Edit" CommandParameter="{Binding .}" Command="{Binding Path=DataContext.NavigateToAddCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}} }" Padding="5" Margin="5,0,0,0" />
+                            <Button Content="Delete" CommandParameter="{Binding .}" Command="{Binding Path=DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}} }" Padding="5" Margin="5,0,0,0" />
+                        </StackPanel>
+
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+            
+        </ListView>
+        
        
     </Grid>
 </UserControl>
