--- a/WpfAddressBook/Views/ContactEditView.xaml
+++ b/WpfAddressBook/Views/ContactEditView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WpfAddressBook.Views.ContactAddView"
+﻿<UserControl x:Class="WpfAddressBook.Views.ContactEditView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,27 +7,26 @@
              
              xmlns:viewmodels="clr-namespace:WpfAddressBook.ViewModels"
              xmlns:models="clr-namespace:SharedConsoleApp.Models;assembly=SharedConsoleApp"
-             d:DataContext="{d:DesignInstance Type=viewmodels:ContactAddViewModel}"
+             d:DataContext="{d:DesignInstance Type=viewmodels:ContactEditViewModel}"
              
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="300">
-    <Grid Margin="20">
+    <Grid>
+
         <Grid.RowDefinitions>
             <RowDefinition Height = "auto" />
             <RowDefinition Height="auto"/>
             <RowDefinition Height = "*" />
-        </Grid.RowDefinitions >       
-        
-      
+        </Grid.RowDefinitions >
 
         <!--<StackPanel Grid.Row="0" Margin="0,0,0,5">
             <Label Content = "Add New Contact" />
-            <Button Content="Navigate To List Contact" Command="{Binding NavigateToListCommand}"/>
+            <Button Content="Navigate To List Contact" Command="{Binding }"/>
         </StackPanel>-->
 
-        <StackPanel  >
+        <StackPanel Grid.Row="1" >
             <Label Content = "First Name" FontSize= "10" />
-            <TextBox Text= "{Binding Contact.FirstName }" />
+            <TextBox Text="{Binding Contact.FirstName}" />
             <Label Content= "Last Name" FontSize= "10" />
             <TextBox Text= "{Binding Contact.LastName}" />
             <Label Content= "Addres" FontSize= "10" />
@@ -37,7 +36,7 @@
             <Label Content= "Email" FontSize= "10" />
             <TextBox Text= "{Binding Contact.Email}" />
 
-            <Button Content= "Add Contact" Command="{Binding NavigateToListCommand}" Margin= "0,15 " Padding= "10" />
+            <Button Content= "Update Contact" Command="{Binding UpdateCommand}" Margin= "0,15,0,15" Padding= "10" />
 
         </StackPanel >
 
