--- a/WpfAddressBook/Views/ContactListView.xaml
+++ b/WpfAddressBook/Views/ContactListView.xaml
@@ -11,21 +11,23 @@
              
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="300">
+    
     <Grid  Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height = "auto" />
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        <Button Grid.Row="0" Content="New Contact" Command="{Binding NavigateToAddCommand}" Padding="5"/>
         
-        <StackPanel Grid.Row="0">
+        <!--<StackPanel Grid.Row="0">
             <Label Content="List Of Contacts"/>
             <Button Content="Navigate to Add" Command="{Binding NavigateToAddCommand}"/>
-        </StackPanel>
+        </StackPanel>-->
+       
 
-
-        <ListView Grid.Row="1" ItemsSource="{Binding PrivateContacts}" HorizontalContentAlignment="Stretch" >
+        <ListView Grid.Row="1" ItemsSource="{Binding PrivateContacts}" HorizontalContentAlignment="Stretch" Margin="0,20,0,0" >
             <ListView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate DataType="{x:Type models:PrivateContact}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -33,10 +35,10 @@
                         </Grid.ColumnDefinitions>
                         
                         <TextBlock Grid.Column="0" Text="{Binding FirstName}" VerticalAlignment="Center" />
-
+                      
                         <StackPanel Grid.Column="1" Orientation="Horizontal">
-                            <Button Content="Edit" CommandParameter="{Binding .}" Command="{Binding Path=DataContext.NavigateToAddCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}} }" Padding="5" Margin="5,0,0,0" />
-                            <Button Content="Delete" CommandParameter="{Binding .}" Command="{Binding Path=DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}} }" Padding="5" Margin="5,0,0,0" />
+                            <Button Content="Edit" CommandParameter="{Binding .}" Command="{Binding Path=DataContext.NavigateToEditCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}} }" Padding="5" Margin="5,0,0,0" />
+                            <Button Content="Delete" CommandParameter="{Binding .}" Command="{Binding Path=DataContext.UpdateCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}} }" Padding="5" Margin="5,0,0,0" />
                         </StackPanel>
 
                     </Grid>
